--- a/html/semantics/embedded-content/media-elements/mime-types/canPlayType.html
+++ b/html/semantics/embedded-content/media-elements/mime-types/canPlayType.html
@@ -106,10 +106,11 @@ function type_codecs_test(type, audioCodecs, videoCodecs) {
 }
 
 type_codecs_test('audio/mp4', ['mp4a.40.2'], []);
-type_codecs_test('audio/ogg', ['opus', 'speex', 'vorbis'], []);
+type_codecs_test('audio/ogg', ['opus', 'vorbis'], []);
+type_codecs_test('audio/wav', ['1'], []);
 type_codecs_test('audio/webm', ['opus', 'vorbis'], []);
 type_codecs_test('video/3gpp', ['samr'], ['mp4v.20.8']);
 type_codecs_test('video/mp4', ['mp4a.40.2'], ['avc1.42E01E', 'avc1.4D401E', 'avc1.58A01E', 'avc1.64001E', 'mp4v.20.8', 'mp4v.20.240']);
-type_codecs_test('video/ogg', ['flac', 'opus', 'speex', 'vorbis'], ['dirac', 'theora']);
-type_codecs_test('video/webm', ['opus', 'vorbis'], ['vp8']);
+type_codecs_test('video/ogg', ['opus', 'vorbis'], ['theora']);
+type_codecs_test('video/webm', ['opus', 'vorbis'], ['vp8', 'vp8.0', 'vp9', 'vp9.0']);
 </script>
