change url_xmlhttprequest_img.html to a ref test

--- a/FileAPI/url/url_xmlhttprequest_img.html
+++ b/FileAPI/url/url_xmlhttprequest_img.html
@@ -7,6 +7,7 @@
     <link rel="help" href="http://www.w3.org/TR/FileAPI/#creating-revoking">
     <link rel="help" href="http://www.w3.org/TR/XMLHttpRequest2/#interface-xmlhttprequest">
     <script src="/resources/testharness.js"></script>
+    <link rel="reference" href="url_xmlhttprequest_img-ref.html">
   </head>
   <body>
     <p>Test passes if an image displays below</p>
