--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-004.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-004.html
@@ -4,6 +4,7 @@
         <title>Shape Outside Ellipse - Position Length Units</title>
         <link rel="author" title="Adobe" href="http://html.adobe.com/">
         <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com">
+        <link rel="reviewer" title="Alan Stearns" href="mailto:stearns@adobe.com"> <!-- 2014-03-04 -->
         <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#funcdef-ellipse">
         <link rel="help" href="http://www.w3.org/TR/css3-values/#lengths">
         <meta name="assert" content="An ellipse's position arguments may in any valid <length> unit allowed by a <position> value.">
