--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-inset-001.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-inset-001.html
@@ -4,6 +4,7 @@
         <title>Shape Outside Inset Valid Insets</title>
         <link rel="author" title="Adobe" href="http://html.adobe.com/">
         <link rel="author" title="Bear Travis" href="mailto:betravis@adobe.com">
+        <link rel="reviewer" title="Alan Stearns" href="mailto:stearns@adobe.com"> <!-- 2014-03-04 -->
         <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#funcdef-inset">
         <meta name="assert" content="An inset has 1 to 4 insets as percentages or length in any unit">
         <meta name="flags" content="dom">
