--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-inset-004.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-inset-004.html
@@ -4,6 +4,7 @@
         <title>Shape Outside Inset - positive/negative, decimal/non-decimal args</title>
         <link rel="author" title="Adobe" href="http://html.adobe.com/">
         <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com">
+        <link rel="reviewer" title="Alan Stearns" href="mailto:stearns@adobe.com"> <!-- 2014-03-04 -->
         <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#funcdef-inset">
         <meta name="assert" content="These tests verify that shape-outside inset() arguments can be numbers that are signed in 
                                      positive and negative and/or decimal/non-decimal form.">
