--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-inset-009.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-inset-009.html
@@ -4,6 +4,7 @@
         <title>Shape Outside Inset round args - calc() values</title>
         <link rel="author" title="Adobe" href="http://html.adobe.com/">
         <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com">
+        <link rel="reviewer" title="Alan Stearns" href="mailto:stearns@adobe.com"> <!-- 2014-03-04 -->
         <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#funcdef-inset">
         <link rel="help" href="http://www.w3.org/TR/css3-values/#calc">
         <meta name="assert" content="An inset's radial component arguments may be in calc() values.">
