--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-shape-box-pair-000.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-shape-box-pair-000.html
@@ -4,6 +4,7 @@
         <title>Shape Outside Box Shape and Box Valid Values</title>
         <link rel="author" title="Adobe" href="http://html.adobe.com/">
         <link rel="author" title="Bear Travis" href="mailto:betravis@adobe.com">
+        <link rel="reviewer" title="Alan Stearns" href="mailto:stearns@adobe.com"> <!-- 2014-03-04 -->
         <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shape-outside-property">
         <meta name="assert" content="Shape-outside may be a pair of shape and box values">
         <meta name="flags" content="dom">
