added relevant spec link (mainly shape-outside propdef)

--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-inset-008.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-inset-008.html
@@ -6,6 +6,7 @@
         <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com">
         <link rel="reviewer" title="Alan Stearns" href="mailto:stearns@adobe.com"> <!-- 2014-03-04 -->
         <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#funcdef-inset">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shape-outside-property">
         <link rel="help" href="http://www.w3.org/TR/css3-values/#calc">
         <meta name="assert" content="An inset's arguments may be in calc() values.">
         <meta name="flags" content="dom">
