--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-circle-002.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-circle-002.html
@@ -7,6 +7,7 @@
         <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com">
         <link rel="reviewer" title="Alan Stearns" href="mailto:stearns@adobe.com"> <!-- 2014-03-04 -->
         <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#funcdef-circle">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shape-outside-property">
         <link rel="help" href="http://www.w3.org/TR/css3-values/#lengths">
         <meta name="assert" content="A circle's position argument may be any of the valid combinations:
                                      [ percentage|length left|center|right ]
