--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-circle-003.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-circle-003.html
@@ -6,6 +6,7 @@
         <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com">
         <link rel="reviewer" title="Alan Stearns" href="mailto:stearns@adobe.com"> <!-- 2014-03-04 -->
         <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#funcdef-circle">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shape-outside-property">
         <meta name="assert" content="Valid circle position argument list are in the form of:
                                      [ percentage|length left|center|right ] 
                                 or   [ percentage|length left|center|right ] [ percentage|length top|center|bottom  ]
