--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-006.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-006.html
@@ -6,6 +6,7 @@
         <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com">
         <link rel="reviewer" title="Alan Stearns" href="mailto:stearns@adobe.com"> <!-- 2014-03-04 -->
         <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#funcdef-ellipse">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shape-outside-property">
         <meta name="assert" content="An ellipse's radii may be in signed positive or decimal/non-decimal format. Negative
                                      radii are invalid.">
         <meta name="flags" content="dom">
