--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-007.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-007.html
@@ -6,6 +6,7 @@
         <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com">
         <link rel="reviewer" title="Alan Stearns" href="mailto:stearns@adobe.com"> <!-- 2014-03-04 -->
         <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#funcdef-ellipse">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shape-outside-property">
         <meta name="assert" content="This test verifies that invalid shape-radius arguments on ellipse() don't parse.">
         <meta name="flags" content="dom">
         <script src="/resources/testharness.js"></script>
