--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-inset-002.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-inset-002.html
@@ -6,6 +6,7 @@
         <link rel="author" title="Bear Travis" href="mailto:betravis@adobe.com">
         <link rel="reviewer" title="Alan Stearns" href="mailto:stearns@adobe.com"> <!-- 2014-03-04 -->
         <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#funcdef-inset">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shape-outside-property">
         <meta name="assert" content="An inset's radial component has 1 to 4 length/percentages, optionally followed by a '/'
                                      and an additional 1 to 4 length/percentages and lengths can be in any unit.">
         <meta name="flags" content="dom">
