--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-inset-003.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-inset-003.html
@@ -6,6 +6,7 @@
         <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com">
         <link rel="reviewer" title="Alan Stearns" href="mailto:stearns@adobe.com"> <!-- 2014-03-04 -->
         <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#funcdef-inset">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shape-outside-property">
         <link rel="help" href="http://www.w3.org/TR/css3-values/#lengths">
         <meta name="assert" content="An inset's radial component's values can be in any length unit">
         <meta name="flags" content="dom">
