--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-inset-004.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-inset-004.html
@@ -6,6 +6,7 @@
         <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com">
         <link rel="reviewer" title="Alan Stearns" href="mailto:stearns@adobe.com"> <!-- 2014-03-04 -->
         <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#funcdef-inset">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shape-outside-property">
         <meta name="assert" content="These tests verify that shape-outside inset() arguments can be numbers that are signed in 
                                      positive and negative and/or decimal/non-decimal form.">
         <meta name="flags" content="dom">
