--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-polygon-000.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-polygon-000.html
@@ -6,6 +6,7 @@
         <link rel="author" title="Bear Travis" href="mailto:betravis@adobe.com">
         <link rel="reviewer" title="Alan Stearns" href="mailto:stearns@adobe.com"> <!-- 2014-03-04 -->
         <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#funcdef-polygon">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shape-outside-property">
         <meta name="assert" content="A polygonal basic shape has an optional fill-rule and one or more pairs of coordinates">
         <meta name="flags" content="dom">
         <script src="/resources/testharness.js"></script>
