--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-polygon-001.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-polygon-001.html
@@ -6,6 +6,7 @@
         <link rel="author" title="Bear Travis" href="mailto:betravis@adobe.com">
         <link rel="reviewer" title="Alan Stearns" href="mailto:stearns@adobe.com"> <!-- 2014-03-04 -->
         <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#funcdef-polygon">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shape-outside-property">
         <meta name="assert" content="A polygonal basic shape's optional fill-rule may be either 'nonzero' or 'evenodd'">
         <meta name="flags" content="dom">
         <script src="/resources/testharness.js"></script>
