--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-shape-arguments-000.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-shape-arguments-000.html
@@ -6,6 +6,7 @@
         <link rel="author" title="Bear Travis" href="mailto:betravis@adobe.com">
         <link rel="reviewer" title="Alan Stearns" href="mailto:stearns@adobe.com"> <!-- 2014-03-04 -->
         <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#typedef-basic-shape">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shape-outside-property">
         <link rel="help" href="http://www.w3.org/TR/cssom/#serializing-css-values">
         <meta name="assert" content="A basic basic shape can contain any length unit type, or percentage">
         <meta name="flags" content="dom">
