--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-shape-box-pair-000.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-shape-box-pair-000.html
@@ -6,6 +6,7 @@
         <link rel="author" title="Bear Travis" href="mailto:betravis@adobe.com">
         <link rel="reviewer" title="Alan Stearns" href="mailto:stearns@adobe.com"> <!-- 2014-03-04 -->
         <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shape-outside-property">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#typedef-shape-box">
         <meta name="assert" content="Shape-outside may be a pair of shape and box values">
         <meta name="flags" content="dom">
         <script src="/resources/testharness.js"></script>
