--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-polygon-006.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-polygon-006.html
@@ -20,8 +20,8 @@
             var polygon_calc_tests = [];
             ParsingUtils.calcTestValues.forEach(function(value) {
                 testCase = ['polygon('+ value[0] +' '+ value[0] +')',
-                            'polygon(nonzero, '+ value[1] +' '+ value[1] +')',
-                            'polygon(nonzero, '+ value[2] +' '+ value[2] +')'];
+                            'polygon('+ value[1] +' '+ value[1] +')',
+                            'polygon('+ value[2] +' '+ value[2] +')'];
                 polygon_calc_tests.push(testCase);
             });
             ParsingUtils.calcTestValues.forEach(function(value) {
