--- a/FileAPI/idlharness-manual.html
+++ b/FileAPI/idlharness-manual.html
@@ -7,7 +7,7 @@
     <link rel="help" href="http://dev.w3.org/2006/webapi/FileAPI/#conformance">
     <script src="/resources/testharness.js"></script>
     <script src="/resources/testharnessreport.js"></script>
-    <script src="/resources/WebIDLParser.js"></script>
+    <script src="/resources/webidl2/lib/webidl2.js"></script>
     <script src="/resources/idlharness.js"></script>
   </head>
   <body>
