--- a/battery-status/battery-interface-idlharness.html
+++ b/battery-status/battery-interface-idlharness.html
@@ -4,7 +4,7 @@
     <title>Battery Status API Test Suite</title>
     <script src="/resources/testharness.js"></script>
     <script src="/resources/testharnessreport.js"></script>
-    <script src="/resources/WebIDLParser.js"></script>
+    <script src="/resources/webidl2/lib/webidl2.js"></script>
     <script src="/resources/idlharness.js"></script>
     <script type="text/plain" class="untested">
     interface Navigator { };
