--- a/user-timing/idlharness.html
+++ b/user-timing/idlharness.html
@@ -9,7 +9,7 @@
 <link rel="help" href="http://www.w3.org/TR/user-timing/#performancemeasure"/>
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
-<script src="/resources/WebIDLParser.js"></script>
+<script src="/resources/webidl2/lib/webidl2.js"></script>
 <script src="/resources/idlharness.js"></script>
 </head>
 <body>
