--- a/media-source/mediasource-config-change-webm-a-bitrate.html
+++ b/media-source/mediasource-config-change-webm-a-bitrate.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="../resources/testharness.js"></script>
-        <script src="../resources/testharnessreport.js"></script>
+        <script src="/resources/testharness.js"></script>
+        <script src="/resources/testharnessreport.js"></script>
         <script src="mediasource-util.js"></script>
         <script src="mediasource-config-changes.js"></script>
-        <link rel="stylesheet" href="../resources/testharness.css">
+        <link rel="stylesheet" href="/resources/testharness.css">
     </head>
     <body>
         <div id="log"></div>
