--- a/vibration/pattern-array-extra.html
+++ b/vibration/pattern-array-extra.html
@@ -5,9 +5,9 @@
     <title>Vibration API: test a pattern array parameter to vibrate() with an extra (even) item</title>
     <link rel='author' title='Robin Berjon' href='mailto:robin@berjon.com'/>
     <link rel='help' href='http://www.w3.org/TR/vibration/#methods'/>
-    <meta name='flags' content='vendor-prefix, dom, interact'/>
+    <meta name='flags' content=dom, interact'/>
     <meta name='assert' content='If the length of pattern is even, then remove the last entry in pattern.'/>
-    <!-- 
+    <!--
       When you review this test, please add
       <link rel='reviewer' title='Your Name' href='mailto:your-email-address'/>
     -->
@@ -22,11 +22,10 @@
     <button id='vib'>Vibrate!</button>
     <div id='log'></div>
     <script src='/resources/testharness.js'></script>
-    <!-- When this test gets approved, remove a "../" below -->
-    <script src='support/feature-detection.js'></script>
-    <script src='support/helpers.js'></script>
+    <script src='/resources/testharnessreport.js'></script>
+    <script src='/common/vendor-prefix.js' data-prefixed-objects='[{"ancestors":["navigator"], "name":"vibrate"}]'></script>
     <script>
-      if (supportsVibration()) {
+      if (undefined !== navigator.vibrate) {
           document.getElementById("vib").onclick = function () {
               navigator.vibrate([1000, 1000, 1000, 1000, 1000, 1000]);
           };
