--- a/vibration/silent-ignore.html
+++ b/vibration/silent-ignore.html
@@ -5,9 +5,9 @@
     <title>Vibration API: test that calls to vibrate() are silently ignored when the device cannot vibrate</title>
     <link rel='author' title='Robin Berjon' href='mailto:robin@berjon.com'/>
     <link rel='help' href='http://www.w3.org/TR/vibration/#methods'/>
-    <meta name='flags' content='vendor-prefix, dom, no-vibrator'/>
+    <meta name='flags' content='dom, no-vibrator'/>
     <meta name='assert' content='If the device does not provide a vibration mechanism, or it is disabled, the user agent must silently ignore any invocations of the vibrate() method.'/>
-    <!-- 
+    <!--
       When you review this test, please add
       <link rel='reviewer' title='Your Name' href='mailto:your-email-address'/>
     -->
@@ -23,11 +23,11 @@
     </p>
     <div id='log'></div>
     <script src='/resources/testharness.js'></script>
-    <script src='support/feature-detection.js'></script>
-    <script src='support/helpers.js'></script>
+    <script src='/resources/testharnessreport.js'></script>
+    <script src='/common/vendor-prefix.js' data-prefixed-objects='[{"ancestors":["navigator"], "name":"vibrate"}]'></script>
     <script>
-      if (supportsVibration()) {
-	  test(function () { 
+      if (undefined !== navigator.vibrate) {
+	  test(function () {
               assert_true(navigator.vibrate(1000), "vibrate() returns true when vibration is not supported");
           }, "Calling vibrate returns true");
       }
