--- a/shadow-dom/elements-and-dom-objects/the-content-html-element/test-006.html
+++ b/shadow-dom/elements-and-dom-objects/the-content-html-element/test-006.html
@@ -45,8 +45,11 @@ test(unit(function (ctx) {
 		'<ul><content id="contentId" select=".clazz"><span id="spandex">This is fallback content</span></content></ul>';
 	s.appendChild(div);
 
-	assert_equals(s.querySelector('#contentId').getDistributedNodes().length, 0,
-			'There should be no distributed nodes');
+	assert_equals(s.querySelector('#contentId').getDistributedNodes().length, 1,
+			'Fallback content should show up as distributed nodes');
+
+	assert_equals(s.querySelector('#contentId').getDistributedNodes()[0].id, 'spandex',
+			'Fallback content should show up as distributed nodes');
 
 }), 'A_10_04_06_T01');
 
